# spawned

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  check_unpin  review-findings.md  sync_check  test_send_sync
.github/prompts/: ai-review.md
.github/workflows/: ai-review.yml  ci.yml  pr_review_chatgpt.yaml  pr_review_claude.yaml  pr_review_kimi.yaml  release.yaml  spawned-concurrency-release.yaml  spawned-rt-release.yaml
concurrency/: Cargo.toml  README.md
concurrency/fuzz/: Cargo.toml
concurrency/fuzz/fuzz_targets/: fuzz_actor_operations.rs  fuzz_genserver_operations.rs
concurrency/src/: actor.rs  actor_table.rs  actor_tests.rs  application.rs  child_handle.rs  error.rs  gen_server.rs  gen_server_tests.rs  lib.rs  link.rs  macros.rs  message.rs  messages.rs  pg.rs  pid.rs  process.rs  process_table.rs  registry.rs  response.rs  stream.rs  stream_tests.rs  supervisor.rs  supervisor_tests.rs  sys.rs  time.rs  timer_tests.rs
concurrency/src/async/: error.rs  gen_server.rs  mod.rs  process.rs  time.rs
concurrency/src/sync/: error.rs  gen_server.rs  mod.rs  process.rs  time.rs
concurrency/src/tasks/: actor.rs  error.rs  gen_server.rs  gen_server_registry.rs  gen_statem.rs  mod.rs  process.rs  stream.rs  stream_test.rs  stream_tests.rs  time.rs  timer_tests.rs
concurrency/src/threads/: actor.rs  error.rs  gen_server.rs  mod.rs  process.rs  stream.rs  stream_tests.rs  time.rs  timer_tests.rs
concurrency/tests/: cfg_gated_protocol.rs
docs/: ALTERNATIVE_APPROACHES.md  API-GUIDE.md  API_ALTERNATIVES_QUICK_REFERENCE.md  API_ALTERNATIVES_SUMMARY.md  API_REDESIGN.md  MIGRATION-0.5.md  PLAN.md  ROADMAP.md
docs/design/: API_ALTERNATIVES_QUICK_REFERENCE.md  API_ALTERNATIVES_SUMMARY.md  API_REDESIGN.md  FRAMEWORK_COMPARISON.md  README.md
examples/: README.md
examples/bank/: Cargo.toml
examples/bank-sync/: Cargo.toml
examples/bank-sync/src/: main.rs
examples/bank/src/: main.rs  messages.rs  protocols.rs  server.rs
examples/bank_sync/: Cargo.toml
examples/bank_sync/src/: main.rs  messages.rs  server.rs
examples/bank_threads/: Cargo.toml
examples/bank_threads/src/: main.rs  protocols.rs  server.rs
examples/blocking_actor/: Cargo.toml  main.rs
examples/blocking_genserver/: Cargo.toml  main.rs
examples/busy_actor_warning/: Cargo.toml  main.rs
examples/busy_genserver_warning/: Cargo.toml  main.rs
examples/chat_room/: Cargo.toml
examples/chat_room/src/: main.rs  messages.rs  protocols.rs  room.rs  user.rs
examples/chat_room_threads/: Cargo.toml
examples/chat_room_threads/src/: main.rs  protocols.rs  room.rs  user.rs
examples/exit_reason/: Cargo.toml
examples/exit_reason/src/: main.rs
examples/name_server/: Cargo.toml
examples/name_server/src/: main.rs  messages.rs  name.rs  protocols.rs  server.rs
examples/name_server_with_error/: Cargo.toml
examples/name_server_with_error/src/: main.rs  messages.rs  server.rs
examples/ping_pong/: Cargo.toml
examples/ping_pong/src/: consumer.rs  main.rs  messages.rs  producer.rs  protocols.rs
examples/ping_pong_sync/: Cargo.toml
examples/ping_pong_sync/src/: consumer.rs  main.rs  messages.rs  producer.rs
examples/ping_pong_threads/: Cargo.toml
examples/ping_pong_threads/src/: consumer.rs  main.rs  messages.rs  producer.rs  protocols.rs
examples/service_discovery/: Cargo.toml
examples/service_discovery/src/: main.rs  protocols.rs  server.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
examples/signal_test/: Cargo.toml
examples/signal_test/src/: main.rs
examples/signal_test_threads/: Cargo.toml
examples/signal_test_threads/src/: main.rs
examples/supervisor/: Cargo.toml  main.rs
examples/updater/: Cargo.toml
examples/updater/src/: main.rs  messages.rs  protocols.rs  server.rs
examples/updater_sync/: Cargo.toml
examples/updater_sync/src/: main.rs  server.rs
examples/updater_threads/: Cargo.toml
examples/updater_threads/src/: main.rs  messages.rs  protocols.rs  server.rs
macros/: Cargo.toml
macros/src/: lib.rs
rt/: Cargo.toml  README.md
rt/src/: lib.rs  tokio.rs
rt/src/async/: mod.rs
rt/src/async/tokio/: mod.rs  oneshot.rs
rt/src/sync/: mod.rs  mpsc.rs  oneshot.rs
rt/src/tasks/: mod.rs
rt/src/tasks/smol/: mod.rs
rt/src/tasks/tokio/: mod.rs  mpsc.rs  oneshot.rs
rt/src/threads/: mod.rs  mpsc.rs  oneshot.rs
rt/src/tokio/: mod.rs  mpsc.rs
rt/src/tracing/: mod.rs
