[workspace]
resolver = "3"

members = [
    "rt",
    "concurrency",
    "examples/bank",
    "examples/bank_threads",
    "examples/name_server",
    "examples/ping_pong",
    "examples/ping_pong_threads",
    "examples/updater",
    "examples/updater_threads",
    "examples/blocking_genserver",
    "examples/busy_genserver_warning",
]

[workspace.dependencies]
spawned-rt = { path = "rt", version = "0.3.0" }
spawned-concurrency = { path = "concurrency", version = "0.3.0" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.package]
version = "0.3.0"
license = "MIT"
edition = "2021"
