[workspace]
resolver = "3"

members = [
    "rt",
    "concurrency",
    "examples/bank",
    "examples/name_server",
    "examples/ping_pong",
    "examples/updater",
    "examples/blocking_genserver",
    "examples/busy_genserver_warning",
    "examples/showcase",
]

[workspace.dependencies]
spawned-rt = { path = "rt", version = "0.4.5" }
spawned-concurrency = { path = "concurrency", version = "0.4.5" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.package]
version = "0.4.5"
license = "MIT"
edition = "2021"
