[package]
name = "spawned-concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
spawned-rt = { workspace = true }
tracing = { workspace = true }
futures = "0.3.1"

[dev-dependencies]
# This tokio imports are only used in tests, we should not use them in the library code.
tokio-stream = { version = "0.1.17" }
tokio = { version = "1", features = ["full"] }

[lib]
path = "./src/lib.rs"
