[package]
name = "spawned-concurrency"
description = "Spawned Concurrency"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spawned-rt = { workspace = true }
tracing = { workspace = true }
futures = "0.3.1"
thiserror = "2.0.12"
dashmap = "6.1.0"
# Used for the `GenServerRegistry` testing.
once_cell = "1.21.3"

[dev-dependencies]
# This tokio imports are only used in tests, we should not use them in the library code.
tokio-stream = { version = "0.1.17" }
tokio = { version = "1", features = ["full"] }

[lib]
path = "./src/lib.rs"
