[package]
name = "spawned-rt"
version = "0.1.2"
edition = "2021"
description = "Spawned Runtime"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15" }
tokio-stream = { version = "0.1.17", features = ["sync"] }
crossbeam = { version = "0.7.3" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
path = "./src/lib.rs"
