[package]
name = "spawned-rt"
description = "Spawned Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
smol = "2.0.2"
tokio-util = { version = "0.7.15" }
tokio-stream = { version = "0.1.17", features = ["sync"] }
crossbeam = { version = "0.7.3" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
path = "./src/lib.rs"

[features]
default = ["smol"]
tokio = []
smol = []
