[package]
name = "spawned-rt"
description = "Spawned Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15" }
tokio-stream = { version = "0.1.17", features = ["sync"] }
crossbeam = { version = "0.7.3" }
ctrlc = "3.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
path = "./src/lib.rs"
