[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[dependencies]
spawned-rt = { workspace = true }
spawned-concurrency = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3.1"

[[bin]]
name = "updater"
path = "src/main.rs"