[package]
name = "updater_threads"
version = "0.1.0"
edition = "2021"

[dependencies]
spawned-rt = { workspace = true }
spawned-concurrency = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3.1"

[[bin]]
name = "updater_threads"
path = "src/main.rs"